--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,15 @@ body {
   height: 15vw;
   object-fit: cover;
 }
+
+.shimmer-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card{
+  margin: 20px;
+  width: 200px;
+  height: 300px;
+  background-color: #F0F0F0;
+}
